--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.15.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "styled-components": "^1.4.6",
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.2"
   }
